# qunix

./: BOOT_FIX_SUMMARY.md  BOOT_GUIDE.md  CHANGES.md  CODE_CHANGES.md  COMMAND_STRUCTURE.md  COMPLETION_DOCUMENT.md  Cargo.toml  DEVELOPMENT_GUIDE.md  DOCUMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SHELL_REFACTORING.md  SOLUTION.md  run_qemu.sh  test_boot.sh  test_commands.sh
.cargo/: config.toml
documentation/: Qunix.md
src/: lib.rs  main.rs
src/fs/: mod.rs  mount.rs
src/fs/ext4/: block.rs  ext4.rs  inode.rs  mod.rs
src/fs/fat32/: dir.rs  fat.rs  fat32.rs  mod.rs
src/fs/vfs/: api.rs  mod.rs  node.rs  vfs.rs
src/hal/: hal.rs  mod.rs
src/hal/cpu/: gdt.rs  idt.rs  interrupts.rs  mod.rs
src/hal/drivers/: ahci.rs  keyboard.rs  mod.rs  pci.rs  pit.rs  serial.rs  tty.rs  usb.rs  vga.rs
src/hal/memory/: frame_allocator.rs  heap.rs  mmu.rs  mod.rs  paging.rs
src/kernel/: init.rs  kernel.rs  mod.rs
src/kernel/scheduler/: context.rs  mod.rs  scheduler.rs  task.rs
src/kernel/sys/: mod.rs  syscalls.rs
src/kernel/sys/posix/: fs.rs  mod.rs  posix.rs  proc.rs  signals.rs
src/qsf/: mod.rs  qsf.rs
src/qsf/modules/: capability.rs  confinement.rs  integrity.rs  mod.rs
src/qsf/policies/: mod.rs
src/userland/: libc.rs  mod.rs  qutils.rs  shell.rs  utils.rs
src/userland/shell/: mod.rs
src/userland/shell/commands/: mod.rs
src/userland/shell/commands/file/: cat.rs  cd.rs  chmod.rs  echo.rs  ls.rs  mkdir.rs  mod.rs  rm.rs  touch.rs
(+12 files in other folders)
