[package]
name = "qunix"
version = "0.1.0"
edition = "2021"
authors = ["Qunix Project"]
description = "A POSIX-compatible operating system kernel written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/qunix/qunix"
keywords = ["os", "kernel", "posix", "rust", "operating-system"]
categories = ["no-std", "os"]

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.4.5"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.4.1"
hashbrown = "0.14.3"

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
